# server/api/openapi.yaml
@@ -1,15 +1,13 @@
 openapi: 3.0.2
-
 info:
-  title: 上报审批系统后台服务 API
-  version: 0.9.0
+  contact:
+    email: rlee@163.com
+    name: Ryan Li
   license:
     name: MIT
     url: https://mit-license.org/
-  contact:
-    name: Ryan Li
-    email: rlee@163.com
-
+  title: 上报审批系统后台服务 API
+  version: 0.9.0
 servers:
   - url: http://localhost:3000/rest
   - url: http://{host}:{port}/{contextPath}
@@ -20,22 +18,14 @@ servers:
         default: "9003"
       contextPath:
         default: rest
-
 paths:
   /application/create:
     post:
-      tags:
-        - Application
-      summary: 创建一个申请
       description: 申请人在“申请页面”填写相关信息并提交申请，将调用此 API 来创建一个新申请。
       operationId: createApplication
-
       requestBody:
-        required: true
         content:
           application/json:
-            schema:
-              $ref: "#/components/schemas/ApplicationDetailsDto"
             examples:
               包干修复初审:
                 value:
@@ -102,152 +92,146 @@ paths:
                   quoteDate: 2020-06-25
                   quoteAmount: "20000"
                   targetAmount: "25000"
-
+            schema:
+              $ref: "#/components/schemas/ApplicationDetailsDto"
+        required: true
       responses:
         "200":
-          description: OK
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  code:
-                    type: integer
-                    description: 返回码。`20000`：成功。
-                  data:
-                    type: object
-                    description: 返回的数据。
-                    properties:
-                      id:
-                        type: string
-                        description: 申请id
-                example:
-                  code: 20000
-                  data:
-                    id: bc8d2f78-ba94-11ea-b3de-0242ac130004
-
+                $ref: "#/components/schemas/inline_response_200"
+          description: OK
+      summary: 创建一个申请
+      tags:
+        - Application
+      x-eov-operation-handler: controllers/ApplicationController
 components:
   schemas:
     ApplicationDetailsDto:
-      required:
-        - state
-        - type
-        - applicant
-        - startDate
-      type: object
+      example:
+        identifier: identifier
+        agreementAmount: agreementAmount
+        insured: insured
+        plateNo: plateNo
+        targetAmount: targetAmount
+        purchasePrice: purchasePrice
+        type: 包干修复
+        applicant: applicant
+        investigator: investigator
+        insurer: insurer
+        finalAmount: finalAmount
+        evaluationCost: evaluationCost
+        deductible: deductible
+        quoteAmount: quoteAmount
+        vehicleModel: vehicleModel
+        repairPlant: repairPlant
+        state: 初审
+        startDate: startDate
+        reportNo: reportNo
+        investigateLocation: investigateLocation
+        quoteDate: quoteDate
+        actualCost: actualCost
+        investigateDate: investigateDate
+        occurredDate: occurredDate
       properties:
         state:
-          type: string
           description: 审批状态。开始申请时，状态为“初审”。
-          enum: [初审, 复审]
+          enum:
+            - 初审
+            - 复审
+          type: string
         type:
-          type: string
           description: 审批类型。
-          enum: [包干修复, 高价值件, 总成部件, 调价申请]
+          enum:
+            - 包干修复
+            - 高价值件
+            - 总成部件
+            - 调价申请
+          type: string
         applicant:
-          type: string
           description: 申请人，通常是定损员本人。
+          type: string
         startDate:
-          type: string
           description: 提交申请的时间。
+          type: string
         reportNo:
-          type: string
           description: 报案号
+          type: string
         plateNo:
-          type: string
           description: 车牌号
+          type: string
         vehicleModel:
-          type: string
           description: 车辆型号
+          type: string
         repairPlant:
-          type: string
           description: 修理厂名称
+          type: string
         actualCost:
-          type: string
           description: 实际价值
+          type: string
         evaluationCost:
-          type: string
           description: 评估价值
+          type: string
         purchasePrice:
-          type: string
           description: 新车购置价
+          type: string
         agreementAmount:
-          type: string
           description: 一次性协议定损金额
+          type: string
         investigator:
-          type: string
           description: 定损员
+          type: string
         investigateLocation:
-          type: string
           description: 定损地点
+          type: string
         investigateDate:
-          type: string
           description: 定损时间
+          type: string
         identifier:
-          type: string
           description: 识别代码
+          type: string
         insurer:
-          type: string
           description: 承保公司
+          type: string
         insured:
-          type: string
           description: 被保险人姓名
+          type: string
         finalAmount:
-          type: string
           description: 最终价格
+          type: string
         deductible:
-          type: string
           description: 自付标准
+          type: string
         occurredDate:
-          type: string
           description: 出险时间
+          type: string
         quoteDate:
-          type: string
           description: 报价时间
+          type: string
         quoteAmount:
-          type: string
           description: 报价金额
-        targetAmount:
           type: string
+        targetAmount:
           description: 目标金额
-    # ApprovalDetailsDto:
-    #   type: object
-    #   properties:
-    #     approver:
-    #       type: string
-    #       description: 审核人
-    #     date:
-    #       type: string
-    #       description: 审核时间
-    #     approved:
-    #       type: boolean
-    #       description: 审核结果。true：通过；false：不通过
-    #     comment:
-    #       type: string
-    #       description: 审核意见
-    # ApprovalHistoryDto:
-    #   type: object
-    #   properties:
-    #     approvalHistory:
-    #       type: array
-    #       description: 审核历史记录，按时间倒序排列。
-    #       items:
-    #         $ref: "#/components/schemas/ApprovalDetailsDto"
-    # TaskQueryDto:
-    #   type: object
-    #   required:
-    #     - userId
-    #   properties:
-    #     userId:
-    #       type: string
-    #       description: 用户 id
-    #     type:
-    #       type: string
-    #       description: 申请类型
-    #       enum: [包干修复, 高价值件, 总成部件, 调价申请]
-    #     reportNo:
-    #       type: string
-    #       description: 报案号
-    #     plateNo:
-    #       type: string
-    #       description: 车牌号
+          type: string
+      required:
+        - applicant
+        - startDate
+        - state
+        - type
+      type: object
+    inline_response_200_data:
+      description: 返回的数据。
+      properties:
+        id:
+          description: 申请id
+          type: string
+    inline_response_200:
+      example: '{"code":20000,"data":{"id":"bc8d2f78-ba94-11ea-b3de-0242ac130004"}}'
+      properties:
+        code:
+          description: 返回码。`20000`：成功。
+          type: integer
+        data:
+          $ref: "#/components/schemas/inline_response_200_data"
